--- a/UserService/Web/appsettings.json
+++ b/UserService/Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Npgsql": "Host=localhost;Username=postgres;Database=userinfo;Password="
+  },
   "AllowedHosts": "*"
 }
