--- a/Libs/HttpLogic/HttpLogic.csproj
+++ b/Libs/HttpLogic/HttpLogic.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0"/>
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0"/>
+        <PackageReference Include="Polly" Version="7.1.0"/>
     </ItemGroup>
 
 </Project>
