--- a/UserService/Services/Services.csproj
+++ b/UserService/Services/Services.csproj
@@ -13,6 +13,13 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1"/>
+        <PackageReference Include="Polly" Version="7.1.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="AchievementServiceConnectionLib">
+        <HintPath>..\..\Libs\AchievementServiceConnectionLib\bin\Debug\net7.0\AchievementServiceConnectionLib.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
